# Space-Project

./: .gitmodules  CMakeLists.txt  README.md  generate_project_win.bat
resources/web/: index.html
src/: AppContext.h  Background.cpp  Background.h  BaseShip.cpp  BaseShip.h  Game.cpp  Game.h  GameEventsSystem.cpp  GameEventsSystem.h  GameObject.cpp  GameObject.h  GameplayManager.cpp  GameplayManager.h  GravityZone.cpp  GravityZone.hpp  Helpers.cpp  Helpers.h  ObjectsManager.cpp  ObjectsManager.h  Physics.cpp  Physics.hpp  PlayerController.cpp  PlayerController.hpp  PlayerShip.cpp  PlayerShip.h  PlayerStats.cpp  PlayerStats.h  Skills.cpp  Skills.h  Vitality.h  main.cpp
src/Enemies/: Asteroid.cpp  Asteroid.h  BaseEnemyShip.cpp  BaseEnemyShip.h  SmallEnemyShip.cpp  SmallEnemyShip.h
src/HUD/: HUDBase.cpp  HUDBase.hpp  HUDContainer.cpp  HUDContainer.hpp  HUDGameState.cpp  HUDGameState.hpp  HUDPlayerState.cpp  HUDPlayerState.hpp  HUDPlayerXP.cpp  HUDPlayerXP.hpp
src/Popups/: DeathPopup.cpp  DeathPopup.hpp  LevelUpPopup.cpp  LevelUpPopup.h  MainMenuPopup.cpp  MainMenuPopup.h  PausePopup.cpp  PausePopup.h  Popup.cpp  Popup.h  Popups.cpp  Popups.h
src/Weapons/: BaseWeapon.cpp  BaseWeapon.h  Gravigun.cpp  Gravigun.hpp  GravizoneParticles.cpp  GravizoneParticles.hpp  LaserWeapon.cpp  LaserWeapon.h  Projectile.cpp  Projectile.h  RocketWeapon.cpp  RocketWeapon.h
